--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "autocomplete-test",
+    "name": "autocomplete-testing",
     "version": "1.0.0",
     "private": false,
     "main": "dist/index.umd.js",
@@ -9,6 +9,10 @@
         "test": "echo \"Error: no test specified\" && exit 1",
         "build": "rollup -c",
         "start": "rollup -c -w"
+    },
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/krish-jindal1/autocomplete-testing.git"
     },
     "author": "Krish",
     "license": "ISC",
